# aesa-radar

./: .gitignore  ChangeLog.md  LICENSE  README.md  Radar.hs  Stream.hs  package.yaml  saab-aesa.cabal  stack.yaml
aesa-atom/: ChangeLog.md  aesa-atom.cabal  package.yaml  run.sh  stack.yaml
aesa-atom/app/: Cube.hs  Main.hs  Stream.hs  Utils.hs
aesa-atom/test/: Generators.lhs  SpecCube.lhs  SpecStream.lhs  Util.hs
aesa-coinsyde/lib/: std.c.template.c
aesa-coinsyde/reference/: main.c
aesa-deep/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
aesa-deep/app/: Main.hs  Utils.hs
aesa-deep/test/: Generators.hs  Spec.hs  TestR1.lhs  TestR2.lhs  TestR3.lhs  TestR4.lhs  Util.hs
aesa-shallow/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
aesa-shallow/app/: Main.hs
docs/: .gitignore  Makefile  README.md  aesa-report.tex  bird2md.sed  ct-sampde-i1.flx  ct-sampde-o1.flx  recycled.txt  refs.bib  title.tex
docs/figs_src/: .gitignore  aesa-net-atom.tex  aesa-net-atom2.tex  aesa-proc-atom.tex  aesa-proc-shallow.tex  cfar-cube.tex  cfar-net-atom.tex  cfar-proc-atom.tex  cfar-proc-shallow.tex  ct-cube.tex  ct-net-atom.tex  ct-proc-atom.tex  ct-proc-shallow.tex  ct-samp.tex  cube-unrolling.tex  dbf-cube.tex  dbf-net-atom.tex  dbf-proc-atom.tex  dbf-proc-shallow.tex  dbf-proc.tex  dbf-samp.tex  deep-syntax.tex  dfb-cfar-net-atom.tex  dfb-cube.tex  dfb-net-atom.tex  dfb-proc-atom.tex  dfb-proc-shallow.tex  dfb-samp.tex  dfb-signal-cube.tex  fir-proc-shallow.tex  if-ad.tex  int-cube.tex  int-net-atom.tex  int-net.tex  int-proc-atom.tex  int-proc-shallow.tex  layers.tex  lazy-plot.tex  pc-counter-atom.tex  pc-cube.tex  (+8 more)
docs/scripts/: bird2md.sh  includes-png.hs  includes-svg.hs  table-filter.py
docs/template/: dump  html.template  latex.template  report-style.sty
docs/text/: 00_Intro.md  20_AtomImpl.md  20_ShallowImpl.md  25_AtomSimulation.md  30_AtomImpl.md  30_ShallowImpl.md  35_ShallowSimulation.md  40_AtomStreamImpl  40_Properties.md  40_RadarModel.md  45_RadarConcl.md  45_TestSuite.md  50_AtomStreamImpl.md  50_Properties.md  58_AtomConclusion.md  60_Synthesis.md  65_AtomStreamSim.md  65_SynthConclusion.md  99_Outro.md
forsyde-atom-extensions/: CHANGELOG.md  LICENSE  forsyde-atom-extensions.cabal  stack.yaml
forsyde-atom-extensions/src/ForSyDe/Atom/: Probability.hs
forsyde-atom-extensions/src/ForSyDe/Atom/MoC/: BDF.hs  CT.hs  DE.hs  SDF.hs  SY.hs  Time.hs  TimeStamp.hs
forsyde-atom-extensions/src/ForSyDe/Atom/MoC/CT/: Core.hs  Interface.hs  Lib.hs
forsyde-atom-extensions/src/ForSyDe/Atom/MoC/DE/: Core.hs  Interface.hs  Lib.hs  Utils.hs
forsyde-atom-extensions/src/ForSyDe/Atom/MoC/SY/: Interface.hs
forsyde-atom-extensions/src/ForSyDe/Atom/Probability/: #Uniform.hs#  .#Uniform.hs  Normal.hs  Uniform.hs
forsyde-atom-extensions/src/ForSyDe/Atom/Skeleton/: Vector.hs
forsyde-atom-extensions/src/ForSyDe/Atom/Skeleton/Vector/: Cube.hs  DSP.hs  Designs.hs  Matrix.hs
forsyde-deep-extensions/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
forsyde-shallow-extensions/: ChangeLog.md  forsyde-shallow-extensions.cabal
scripts/: generate-input.py  plot-input-cube.py  plot-input.py  plot-output-bit.py  plot-output.py
src/: AESAAtom.hs  AESAAtom.lhs  AESAShallow.hs
(+38 files in other folders)
