cabal-version:       >=1.10
name:                forsyde-atom-extensions
version:             0.1.0.0
synopsis:            extensions for forsyde-atom
description:         This package extends ForSyDe.Atom with a couple of new skeletons. They will be included in the next release.
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              George Ungureanu
maintainer:          ugeorge@kth.se
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:   ForSyDe.Atom.Skeleton.Vector
                   , ForSyDe.Atom.Skeleton.Vector.Matrix
                   , ForSyDe.Atom.Skeleton.Vector.Cube
                   , ForSyDe.Atom.Skeleton.Vector.DSP
                   , ForSyDe.Atom.MoC.TimeStamp
                   , ForSyDe.Atom.MoC.Time
                   , ForSyDe.Atom.MoC.SY
                   , ForSyDe.Atom.MoC.SY.Interface
                   , ForSyDe.Atom.MoC.DE
                   , ForSyDe.Atom.MoC.DE.Core
                   , ForSyDe.Atom.MoC.DE.Lib
                   , ForSyDe.Atom.MoC.DE.Utils
                   , ForSyDe.Atom.MoC.DE.Interface
                   , ForSyDe.Atom.MoC.CT
                   , ForSyDe.Atom.MoC.CT.Core
                   , ForSyDe.Atom.MoC.CT.Lib
                   , ForSyDe.Atom.MoC.CT.Interface
                   , ForSyDe.Atom.MoC.SDF
                   , ForSyDe.Atom.MoC.BDF
  other-modules:     Paths_forsyde_atom_extensions
  -- other-extensions:
  build-depends:       base >=4.2 && <5,
                       numbers,
                       split,
                       random,
                       normaldistribution,
                       forsyde-atom
                       
  hs-source-dirs:      src
  default-language:    Haskell2010
